migrator-tests/tests/snapshots/generate__oneway_migrations-6.snap
---
source: migrator-tests/tests/generate.rs
expression: fields_info.unwrap()
---
{
    "events": {
        "event1": "DEFINE EVENT event1 ON animal WHEN species = 'Homo Erectus' AND velocity > 545 THEN (SELECT * FROM crop)",
        "event2": "DEFINE EVENT event2 ON animal WHEN (species = 'Homo Sapien') AND (velocity < 10) THEN (SELECT * FROM eats)",
    },
    "fields": {
        "attributes": "DEFINE FIELD attributes ON animal TYPE array<string>",
        "createdAt": "DEFINE FIELD createdAt ON animal TYPE datetime",
        "id": "DEFINE FIELD id ON animal TYPE record<animal>",
        "species": "DEFINE FIELD species ON animal TYPE string",
        "updatedAt": "DEFINE FIELD updatedAt ON animal TYPE datetime",
        "velocity": "DEFINE FIELD velocity ON animal TYPE int",
    },
    "indexes": {
        "species_speed_idx": "DEFINE INDEX species_speed_idx ON animal FIELDS species, velocity UNIQUE",
    },
    "lives": {},
    "tables": {},
}
