migrator-tests/tests/snapshots/generate__oneway_migrations-8.snap
---
source: migrator-tests/tests/generate.rs
expression: fields_info.unwrap()
---
{
    "events": {},
    "fields": {
        "color": "DEFINE FIELD color ON crop TYPE string",
        "id": "DEFINE FIELD id ON crop TYPE record<crop>",
    },
    "indexes": {},
    "lives": {},
    "tables": {},
}
