migrator-tests/tests/snapshots/generate__oneway_migrations.snap
---
source: migrator-tests/tests/generate.rs
expression: "table_defs.join(\"\\n\")"
---
DEFINE TABLE animal SCHEMAFULL;
DEFINE TABLE crop SCHEMAFULL;
DEFINE TABLE eats SCHEMAFULL;
DEFINE TABLE migration SCHEMAFULL;
DEFINE TABLE planet SCHEMAFULL;
DEFINE TABLE student SCHEMAFULL;
